Bug 14683 - libICE ansification and compile warning fixes
Summary: libICE ansification and compile warning fixes
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/ICE (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2008-02-26 09:02 UTC by Paulo César Pereira de Andrade
Modified: 2009-01-08 14:32 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
0001-libICE-ansification.patch (37.95 KB, patch)
2008-02-26 09:02 UTC, Paulo César Pereira de Andrade
no flags Details | Splinter Review
0002-Allow-globals.h-to-be-included-by-other-files.patch (4.00 KB, patch)
2008-02-26 09:03 UTC, Paulo César Pereira de Andrade
no flags Details | Splinter Review
0003-Fix-warnings-due-to-using-DICE_t-and-also-defining.patch (710 bytes, patch)
2008-02-26 09:03 UTC, Paulo César Pereira de Andrade
no flags Details | Splinter Review
0004-Move-extern-declarations-to-globals.h.patch (1.40 KB, patch)
2008-02-26 09:04 UTC, Paulo César Pereira de Andrade
no flags Details | Splinter Review

Description Paulo César Pereira de Andrade 2008-02-26 09:02:47 UTC
Created attachment 14582 [details] [review]
0001-libICE-ansification.patch

There are no prototypes with char or short arguments,
and the long arguments should are only internal to the
library.

  Also moved externs from C files to headers.
Comment 1 Paulo César Pereira de Andrade 2008-02-26 09:03:24 UTC
Created attachment 14583 [details] [review]
0002-Allow-globals.h-to-be-included-by-other-files.patch
Comment 2 Paulo César Pereira de Andrade 2008-02-26 09:03:49 UTC
Created attachment 14584 [details] [review]
0003-Fix-warnings-due-to-using-DICE_t-and-also-defining.patch
Comment 3 Paulo César Pereira de Andrade 2008-02-26 09:04:09 UTC
Created attachment 14585 [details] [review]
0004-Move-extern-declarations-to-globals.h.patch
Comment 4 Paulo César Pereira de Andrade 2008-02-26 09:04:53 UTC
Comment on attachment 14585 [details] [review]
0004-Move-extern-declarations-to-globals.h.patch

Ops, explicitly mark as patch file.
Comment 5 Paulo César Pereira de Andrade 2009-01-08 14:32:06 UTC
This was corrected in libICE 1.0.5.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.