ANSI C

convert all old style function declarations

see also: Paulo Cesar Pereira de Andrade <pcpa@mandriva.com.br>
http://bugs.freedesktop.org/show_bug.cgi?id=14683
http://bugs.freedesktop.org/attachment.cgi?id=14582

see also: Magnus Kessler <Magnus.Kessler@gmx.net>
http://lists.freedesktop.org/archives/xorg/2008-October/039799.html
http://lists.freedesktop.org/archives/xorg/attachments/20081030/b2ea5b1c/attachment-0001.bin